# ohtu-palautukset-s22

./: PULL.MD  README.md
viikko2/: T9muutos  haara1.txt  haara2.txt  kopiossatdsto.txt  tiedosto.txt  träkkäävä.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: MERGE.md
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py
