[tool.poetry]
name = "poetry-harjoittelu"
version = "0.1.0"
description = ""
authors = ["Sauli Sorvari <sauli.sorvari@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_harjoittelu"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
jsonpickle = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
